<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/style_Seccion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/juego" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="182dp"
        android:layout_height="238dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        style="@style/style_Seccion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/opciones" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="5dip"
        android:baselineAligned="false"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/view"
                android:onClick="iniciar" />

            <TextView
                android:id="@+id/viewtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/iniciar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/reset"
                android:onClick="continuar" />

            <TextView
                android:id="@+id/resettext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/continuar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/exit"
                android:onClick="ir" />

            <TextView
                android:id="@+id/exittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/ir" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>